agregando responsividad a la pagina

--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="hero__image-container">
-          <img
-            class="hero__image"
-            src="./images/Imagen de WhatsApp 2023-07-30 a las 08.20.363.jpg"
-            alt="imagen de Miguel Falcón"
-          />
-        </div>
+        <img
+          class="hero__image"
+          src="./images/Imagen de WhatsApp 2023-07-30 a las 08.20.363.jpg"
+          alt="imagen de Miguel Falcón"
+        />
         <div class="hero__content">
-          <h1 class="hero__title">
+          <h2 class="hero__title">
             Hola, mi nombre es Miguel Angel Falcón y construyo páginas web
-          </h1>
+          </h2>
           <p class="hero__description">
             Soy formado en lorem ipsum sit amet consectetur y actualmente estoy
             participando en el proyecto Oracle ONE en Alura Latam.
@@ -62,200 +60,222 @@
           </div>
         </div>
       </section>
-      <article class="section section--about-me" id="about-me">
-        <h1 class="section__title">Sobre mi</h1>
-        <p class="section__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-          velit velit, volutpat semper dignissim dictum, imperdiet ut lacus.
-          Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper
-          sagittis ligula et lacinia.
-        </p>
-        <p class="section__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-          velit velit, volutpat semper dignissim dictum, imperdiet ut lacus.
-          Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper
-          sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas
-          metus vitae, aliquet metus.
-        </p>
-      </article>
-      <article class="section section--skills" id="skills">
-        <h1 class="section__title">Skills</h1>
-        <div class="cards">
-          <div class="card card--skill">
-            <figure class="card__figure">
-              <img
-                class="card__image"
-                src="./images/html.png"
-                alt="logo html 5"
-              />
-            </figure>
-            <p class="card__text">Html 5</p>
-          </div>
-          <div class="card card--skill">
-            <figure class="card__figure">
-              <img
-                class="card__image"
-                src="./images/javas.png"
-                alt="logo javascript"
-              />
-            </figure>
-            <p class="card__text">Javascript</p>
-          </div>
-          <div class="card card--skill">
-            <figure class="card__figure">
-              <img
-                class="card__image"
-                src="./images/react.png"
-                alt="logo react"
-              />
-            </figure>
-            <p class="card__text">React</p>
-          </div>
-          <div class="card card--skill">
-            <figure class="card__figure">
-              <img class="card__image" src="./images/css.png" alt="logo css" />
-            </figure>
-            <p class="card__text">CSS</p>
-          </div>
+      <section class="section section--about-me" id="about-me">
+        <div class="section__content">
+          <h2 class="section__title section__title--about-me">Sobre mi</h2>
+          <p class="section__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Pellentesque velit velit, volutpat semper dignissim dictum,
+            imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
+            potenti. Ut semper sagittis ligula et lacinia.
+          </p>
+          <p class="section__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Pellentesque velit velit, volutpat semper dignissim dictum,
+            imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
+            potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis
+            venenatis, egestas metus vitae, aliquet metus.
+          </p>
         </div>
-      </article>
-      <article class="section section--hobbies" id="hobbies">
-        <h1 class="section__title">Hobbies</h1>
-        <div class="cards">
-          <div class="card card--hobby">
-            <figure class="card__figure">
-              <img
-                class="card__image"
-                src="./images/ukelele.png"
-                alt="imagen de un ukelele"
-              />
-            </figure>
-            <p class="card__text">Tocar ukelele</p>
+      </section>
+      <article class="sections">
+        <section class="section section--skills" id="skills">
+          <h2 class="section__title section__title--skills">Skills</h2>
+          <div class="cards">
+            <div class="card card--skill">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/html.png"
+                  alt="logo html 5"
+                />
+              </figure>
+              <p class="card__text">Html 5</p>
+            </div>
+            <div class="card card--skill">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/javas.png"
+                  alt="logo javascript"
+                />
+              </figure>
+              <p class="card__text">Javascript</p>
+            </div>
+            <div class="card card--skill">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/react.png"
+                  alt="logo react"
+                />
+              </figure>
+              <p class="card__text">React</p>
+            </div>
+            <div class="card card--skill">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/css.png"
+                  alt="logo css"
+                />
+              </figure>
+              <p class="card__text">CSS</p>
+            </div>
           </div>
-          <div class="card card--hobby">
-            <figure class="card__figure">
-              <img
-                class="card__image"
-                src="./images/music.png"
-                alt="audifonos"
-              />
-            </figure>
-            <p class="card__text">Oír música</p>
+        </section>
+        <section class="section section--hobbies" id="hobbies">
+          <h2 class="section__title section__title--hobbies">Hobbies</h2>
+          <div class="cards">
+            <div class="card card--hobby">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/ukelele.png"
+                  alt="imagen de un ukelele"
+                />
+              </figure>
+              <p class="card__text">Tocar ukelele</p>
+            </div>
+            <div class="card card--hobby">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/music.png"
+                  alt="audifonos"
+                />
+              </figure>
+              <p class="card__text">Oír música</p>
+            </div>
+            <div class="card card--hobby">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/tv.png"
+                  alt="televisión"
+                />
+              </figure>
+              <p class="card__text">Ver series</p>
+            </div>
+            <div class="card card--hobby">
+              <figure class="card__figure">
+                <img
+                  class="card__image"
+                  src="./images/cocina.png"
+                  alt="cubiertos"
+                />
+              </figure>
+              <p class="card__text">Cocinar</p>
+            </div>
           </div>
-          <div class="card card--hobby">
-            <figure class="card__figure">
-              <img class="card__image" src="./images/tv.png" alt="televisión" />
-            </figure>
-            <p class="card__text">Ver series</p>
-          </div>
-          <div class="card card--hobby">
-            <figure class="card__figure">
-              <img
-                class="card__image"
-                src="./images/cocina.png"
-                alt="cubiertos"
-              />
-            </figure>
-            <p class="card__text">Cocinar</p>
-          </div>
-        </div>
+        </section>
       </article>
       <section class="study">
-        <h1 class="study__title">Formación académica</h1>
-        <div class="study__item study__item--first">
-          <div class="study__image-container">
-            <img
-              class="study__image study__image--alura"
-              src="./images/alura.png"
-              alt="imagen con el nombre de alura"
-            />
+        <h2 class="study__title">Formación académica</h2>
+        <div class="study__items">
+          <div class="study__item study__item--first">
+            <div class="study__image-container">
+              <img
+                class="study__image study__image--alura"
+                src="./images/alura.png"
+                alt="imagen con el nombre de alura"
+              />
+            </div>
+            <h3 class="study__subtitle">Formación en front-end</h3>
+            <p class="study__text">2024/2025 - Alura</p>
           </div>
-          <h2 class="study__subtitle">Formación en front-end</h2>
-          <p class="study__text">2024/2025 - Alura</p>
-        </div>
-        <div class="study__item study__item--second">
-          <div class="study__image-container">
-            <img
-              class="study__image study__image--tripleten"
-              src="./images/tripleten.jpg"
-              alt="imagen con el nombre de tripleten"
-            />
+          <div class="study__item study__item--second">
+            <div class="study__image-container">
+              <img
+                class="study__image study__image--tripleten"
+                src="./images/tripleten.jpg"
+                alt="imagen con el nombre de tripleten"
+              />
+            </div>
+            <h3 class="study__subtitle">Formación fullstack</h3>
+            <p class="study__text">2025 - Tripleten</p>
           </div>
-          <h2 class="study__subtitle">Formación fullstack</h2>
-          <p class="study__text">2025 - Tripleten</p>
         </div>
       </section>
       <section class="experience">
-        <h1 class="experience__title">Experiencia profesional</h1>
-        <img
-          class="experience__image"
-          src="./images/proyecto1.png"
-          alt="imagen de un encriptador de texto"
-        />
-        <div class="experience__content">
-          <h2 class="experience__subtitle">Encriptador de texto</h2>
-          <p class="experience__description">Challenge Oracle</p>
-          <div class="experience__links">
-            <a
-              class="experience__link experience__link--repository"
-              href="http://"
-              >Repositório</a
-            >
-            <a class="experience__link experience__link--demo" href="http://"
-              >Ver demo</a
-            >
+        <h2 class="experience__title">Experiencia profesional</h2>
+        <div class="experience__media-container">
+          <img
+            class="experience__image"
+            src="./images/proyecto1.png"
+            alt="imagen de un encriptador de texto"
+          />
+          <div class="experience__content">
+            <h3 class="experience__subtitle">Encriptador de texto</h3>
+            <p class="experience__description">Challenge Oracle</p>
+            <div class="experience__links">
+              <a
+                class="experience__link experience__link--repository"
+                href="http://"
+                >Repositório</a
+              >
+              <a class="experience__link experience__link--demo" href="http://"
+                >Ver demo</a
+              >
+            </div>
           </div>
         </div>
       </section>
       <section class="contact">
-        <div class="contact__header">
-          <h1 class="contact__title">Contacto</h1>
-          <p class="contact__description">
-            ¿Quieres contactarme?<br />Complete el siguiente formulario y me
-            pondré en contacto con usted lo antes posible.
-          </p>
-        </div>
-        <form action="">
-          <div class="contact__inputs">
-            <input
-              class="contact__input contact__input--name"
-              type="text"
-              name="name"
-              id="name"
-              required
-              placeholder="Nombre"
-            />
-            <input
-              class="contact__input contact__input--email"
-              type="email"
-              name="email"
-              id="email"
-              required
-              placeholder="E-mail"
-            />
-            <input
-              class="contact__input contact__input--about"
-              type="text"
-              name="about"
-              id="about"
-              placeholder="Asunto"
-            />
-            <!-- Reemplazamos el input por un textarea para el mensaje -->
-            <textarea
-              class="contact__input contact__input--message"
-              name="message"
-              id="message"
-              required
-              placeholder="Mensaje"
-            ></textarea>
-            <input
-              class="contact__input contact__input--submit"
-              type="submit"
-              value="Enviar mensaje"
-              id="submit"
-            />
+        <img
+          class="contact__image"
+          src="./images/contacto.png"
+          alt="imagen de un telefono"
+        />
+        <div class="contact__content">
+          <div class="contact__header">
+            <h2 class="contact__title">Contacto</h2>
+            <p class="contact__description">
+              ¿Quieres contactarme?<br />Complete el siguiente formulario y me
+              pondré en contacto con usted lo antes posible.
+            </p>
           </div>
-        </form>
+          <form action="">
+            <div class="contact__inputs">
+              <input
+                class="contact__input contact__input--name"
+                type="text"
+                name="name"
+                id="name"
+                required
+                placeholder="Nombre"
+              />
+              <input
+                class="contact__input contact__input--email"
+                type="email"
+                name="email"
+                id="email"
+                required
+                placeholder="E-mail"
+              />
+              <input
+                class="contact__input contact__input--about"
+                type="text"
+                name="about"
+                id="about"
+                placeholder="Asunto"
+              />
+              <textarea
+                class="contact__input contact__input--message"
+                name="message"
+                id="message"
+                required
+                placeholder="Mensaje"
+              ></textarea>
+              <input
+                class="contact__input contact__input--submit"
+                type="submit"
+                value="Enviar mensaje"
+                id="submit"
+              />
+            </div>
+          </form>
+        </div>
       </section>
     </main>
     <footer class="footer">
