agregando responsividad a la pagina

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </section>
       </article>
       <section class="study">
-        <h2 class="study__title">Formación académica</h2>
+        <h2 class="study__title" id="formacion">Formación académica</h2>
         <div class="study__items">
           <div class="study__item study__item--first">
             <div class="study__image-container">
@@ -198,7 +198,7 @@
         </div>
       </section>
       <section class="experience">
-        <h2 class="experience__title">Experiencia profesional</h2>
+        <h2 class="experience__title" id="proyects">Experiencia profesional</h2>
         <div class="experience__media-container">
           <img
             class="experience__image"
@@ -229,7 +229,7 @@
         />
         <div class="contact__content">
           <div class="contact__header">
-            <h2 class="contact__title">Contacto</h2>
+            <h2 class="contact__title" id="contact">Contacto</h2>
             <p class="contact__description">
               ¿Quieres contactarme?<br />Complete el siguiente formulario y me
               pondré en contacto con usted lo antes posible.
