dando funcionalidad a los enlaces

--- a/index.html
+++ b/index.html
@@ -49,14 +49,24 @@
             Hola, mi nombre es Miguel Angel Falcón y construyo páginas web
           </h2>
           <p class="hero__description">
-            Soy formado en lorem ipsum sit amet consectetur y actualmente estoy
-            participando en el proyecto Oracle ONE en Alura Latam.
+            Apasionado por transformar ideas en experiencias digitales
+            impactantes. Enfocado en detalles, innovación y usabilidad para
+            crear soluciones que conecten con los usuarios.
           </p>
           <div class="hero__links">
-            <a class="hero__link" href="http://">Github</a>
-            <a class="hero__link" href="http://">Linkedin</a>
-            <a class="hero__link" href="http://">Instagram</a>
-            <a class="hero__link" href="http://">Curriculum</a>
+            <a class="hero__link" href="https://github.com/MiguelAngeltxt"
+              >Github</a
+            >
+            <a
+              class="hero__link"
+              href="https://www.linkedin.com/in/miguel-angel-falcon-valenzuela-64bbb520a/"
+              >Linkedin</a
+            >
+            <a
+              class="hero__link"
+              href="https://www.instagram.com/_migue.f?igsh=MTE0czF1ZXA2a2Fo&utm_source=qr"
+              >Instagram</a
+            >
           </div>
         </div>
       </section>
@@ -64,17 +74,20 @@
         <div class="section__content">
           <h2 class="section__title section__title--about-me">Sobre mi</h2>
           <p class="section__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Pellentesque velit velit, volutpat semper dignissim dictum,
-            imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
-            potenti. Ut semper sagittis ligula et lacinia.
+            Soy un desarrollador frontend con una pasión por crear interfaces
+            web atractivas, intuitivas y funcionales. Domino tecnologías como
+            HTML5, CSS3, JavaScript y frameworks como React, siempre con un
+            enfoque en el diseño responsivo y la experiencia del usuario. Mi
+            objetivo es combinar creatividad y funcionalidad para construir
+            soluciones digitales que destaquen.
           </p>
           <p class="section__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Pellentesque velit velit, volutpat semper dignissim dictum,
-            imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
-            potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis
-            venenatis, egestas metus vitae, aliquet metus.
+            Disfruto aprender nuevas herramientas y mantenerme al día con las
+            tendencias en desarrollo web. Para mí, cada proyecto es una
+            oportunidad de resolver problemas de manera innovadora y colaborar
+            en equipo para lograr resultados excepcionales. Si buscas alguien
+            comprometido y creativo para dar vida a tus ideas, estaré encantado
+            de ayudarte.
           </p>
         </div>
       </section>
@@ -211,10 +224,12 @@
             <div class="experience__links">
               <a
                 class="experience__link experience__link--repository"
-                href="http://"
+                href="https://github.com/MiguelAngeltxt/Juego-del-N-mero-Secreto"
                 >Repositório</a
               >
-              <a class="experience__link experience__link--demo" href="http://"
+              <a
+                class="experience__link experience__link--demo"
+                href="https://miguelangeltxt.github.io/Juego-del-N-mero-Secreto/"
                 >Ver demo</a
               >
             </div>
