--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
             <div class="experience__links">
               <a
                 class="experience__link experience__link--repository"
-                href="https://github.com/MiguelAngeltxt/Juego-del-N-mero-Secreto"
+                href="https://github.com/MiguelAngeltxt/Challenge-ONE"
                 >Repositório</a
               >
               <a
                 class="experience__link experience__link--demo"
-                href="https://miguelangeltxt.github.io/Juego-del-N-mero-Secreto/"
+                href="https://miguelangeltxt.github.io/Challenge-ONE/"
                 >Ver demo</a
               >
             </div>
