--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio</title>
+    <title>Miguel Angel Falcon</title>
+    <link
+      rel="shortcut icon"
+      href="./images/OIG1 (1).jpeg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body class="page">
@@ -46,7 +51,7 @@
         />
         <div class="hero__content">
           <h2 class="hero__title">
-            Hola, mi nombre es Miguel Angel Falcón y construyo páginas web
+            Soy Miguel Ángel Falcón, tu aliado para crear la web perfecta
           </h2>
           <p class="hero__description">
             Apasionado por transformar ideas en experiencias digitales
@@ -54,18 +59,19 @@
             crear soluciones que conecten con los usuarios.
           </p>
           <div class="hero__links">
-            <a class="hero__link" href="https://github.com/MiguelAngeltxt"
-              >Github</a
+            <a class="hero__link" href="https://github.com/MiguelAngeltxt">
+              <img src="./images/github.png" alt="" />Github</a
             >
             <a
               class="hero__link"
-              href="https://www.linkedin.com/in/miguel-angel-falcon-valenzuela-64bbb520a/"
-              >Linkedin</a
+              href="https://www.linkedin.com/in/miguel-%C3%A1ngel-falc%C3%B3n-valenzuela-64bbb520a"
+              download="Miguel-Falcon"
             >
-            <a
-              class="hero__link"
-              href="https://www.instagram.com/_migue.f?igsh=MTE0czF1ZXA2a2Fo&utm_source=qr"
-              >Instagram</a
+              <img src="./images/linkedin-logo.png" alt="Linkedin" />
+              Linkedin</a
+            >
+            <a class="hero__link hero__link--cv" href="ESP.pdf">
+              <img src="./images/cv.png" alt="" />Curriculum</a
             >
           </div>
         </div>
@@ -211,7 +217,7 @@
         </div>
       </section>
       <section class="experience">
-        <h2 class="experience__title" id="proyects">Experiencia profesional</h2>
+        <h2 class="experience__title" id="proyects">Mis proyectos</h2>
         <div class="experience__media-container">
           <img
             class="experience__image"
@@ -236,7 +242,7 @@
           </div>
         </div>
       </section>
-      <section class="contact">
+      <!-- <section class="contact">
         <img
           class="contact__image"
           src="./images/contacto.png"
@@ -291,10 +297,11 @@
             </div>
           </form>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
-      <p class="footer__text">Desarrollado por Miguel Falcón 2024</p>
+      <p class="footer__text">Desarrollado por Miguel Falcón 2025</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
